@@ -1332,7 +1332,10 @@ override_options (void)
     }
   if (ix86_asm_string != 0)
     {
-      if (!strcmp (ix86_asm_string, "intel"))
+      /* APPLE LOCAL begin mainline 4298982 */
+      if (! TARGET_MACHO
+	  && !strcmp (ix86_asm_string, "intel"))
+      /* APPLE LOCAL end mainline 4298982 */
 	ix86_asm_dialect = ASM_INTEL;
       else if (!strcmp (ix86_asm_string, "att"))
 	ix86_asm_dialect = ASM_ATT;
