@@ -9301,8 +9301,11 @@ functional units well resulting in instable performance.
 
 @item -masm=@var{dialect}
 @opindex masm=@var{dialect}
-Output asm instructions using selected @var{dialect}.  Supported choices are
-@samp{intel} or @samp{att} (the default one).
+Output asm instructions using selected @var{dialect}.  Supported
+@c APPLE LOCAL begin mainline 4298982
+choices are @samp{intel} or @samp{att} (the default one).  Darwin does
+not support intel.
+@c APPLE LOCAL end mainline 4298982
 
 @item -mieee-fp
 @itemx -mno-ieee-fp
